# weather-api

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  function.go  go.mod  go.sum  main.go
.circleci/: config.yml
cmd/: main.go
deployments/: flux.yaml  kubernetes.yaml
deployments/manifests/: deployment.yaml  ingress.yaml  service.yaml
internal/cache/: cache.go
internal/config/: config.go
internal/handlers/: aqi.go  context.go  forecast.go  help.go  nws.go  types.go
internal/noaa/: api.go  types.go
internal/nws/: api.go  types.go
internal/purpleair/: purpleair.go  types.go
internal/utils/: aqi.go  aqi_test.go  geo.go  http.go  types.go  utils.go  utils_test.go
src/: error.rs  handlers.rs  main.rs  nws.rs  state.rs  types.rs
views/: aqi.html  aqi_err.html  help.html  weather.html
